--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "mongoose": "^5.5.2",
+    "express": "^4.18.2",
+    "mongoose": "^5.13.15",
     "morgan": "^1.9.1",
     "slugify": "^1.3.4",
     "validator": "^10.11.0"
@@ -27,6 +27,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.20",
     "prettier": "^1.17.0"
   },
   "engines": {
