--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
-    "express": "^4.18.2",
-    "mongoose": "^5.13.15",
+    "express": "^4.16.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^3.5.0",
+    "helmet": "^3.16.0",
+    "hpp": "^0.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.1.1",
     "slugify": "^1.3.4",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -27,8 +35,6 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "ndb": "^1.1.5",
-    "nodemon": "^2.0.20",
     "prettier": "^1.17.0"
   },
   "engines": {
